# NixJson

./: CMakeLists.txt  Doxyfile  README.md  dicionario.c  dicionario.h  main.c  main.out]  nixJson.c  nixJson.h  teste.json
examples/: data1.json  data2.json  example1.c  example2.c
include/: dicionario.h  nixJson.h
src/: dicionario.c  nixJson.c
